# mana-softexpert

./: README.md  manifest.yaml  pyproject.toml
src/mana_softexpert/: __init__.py  wf.py
tests/: test_wf.py
